@@ -46,3 +46,13 @@ draft_home:
   article_id: 11
   section_id: 1
   position: 5
+draft_about:
+  id: 10
+  article_id: 11
+  section_id: 2
+  position: 4
+future_about:
+  id: 11
+  article_id: 5
+  section_id: 2
+  position: 5
