@@ -8,6 +8,8 @@
     map.foo ...
   end
 
+* fix that only published articles are available as section pages.
+
 * 0.7.3 *
 
 * Fix duplicate tag bug.
